--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "@ngrx/effects": "^2.0.5",
+    "@ngrx/effects": "^4.1.1",
+    "@ngrx/router-store": "^6.1.0",
+    "@ngrx/store": "^6.1.0",
+    "@ngrx/store-devtools": "^6.1.0",
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.3.2",
+    "rxjs-compat": "^6.0.0-beta.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
